# dockerbot

./: .gitignore  .justfile  README.md  pyproject.toml  sample.env
src/: bot.py  docker.py  log.py  main.py  telegram.py
test/: test_docker.py  test_telegram.py
